# django-celery-beat-endpoint

./: README.md  setup.cfg
django_celery_beat_endpoint/: beat.py
django_celery_beat_endpoint/backends/: base.py
django_celery_beat_status/: beat.py  celery.py  defaults.py
django_celery_beat_status/backends/: base.py
