[metadata]
name = django-celery-beat-status
version = attr: django_celery_beat_status.__version__
url = https://github.com/ZhaoQi99/django-celery-beat-status
project_urls = 
    Homepage = https://github.com/ZhaoQi99/django-celery-beat-status
    Changelog = https://github.com/ZhaoQi99/django-celery-beat-status/releases
    Source = https://github.com/ZhaoQi99/django-celery-beat-status
    Issue Tracker = https://github.com/ZhaoQi99/django-celery-beat-status/issues
    # Documentation = https://github.com/ZhaoQi99/django-celery-beat-status
author = Qi Zhao
author_email = zhaoqi99@outlook.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
license_files = LICENSE
description = A library that provides status and tasks HTTP API for Django Celery Beat.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django,celery,beat,status

[options]
install_requires = 
    celery
    Django
python_requires = >=3.6
packages = find:


[options.packages.find]
exclude =
    tests
    *.tests.*

[black]
line-length = 88

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,E701,E501